--- a/hugo.toml
+++ b/hugo.toml
@@ -1,12 +1,13 @@
 ######################## default configuration ####################
 # The base URL of your site (required). This will be prepended to all relative URLs.
 baseURL = "/"
+languageCode = "en-us"
 # Title of your website (required).
-title = "Hugoplate"
+title = "Gluon Syndicate"
 # Your theme name
 theme = "hugoplate"
 # Default time zone for time stamps; use any valid tz database name: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
-timeZone = "America/New_York"
+timeZone = "Europe/Bratislava"
 # post pagination
 paginate = 2 # see https://gohugo.io/extras/pagination/
 # post excerpt
