--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -8,12 +8,20 @@ weight = 1
 
 [[main]]
 name = "About"
-pageRef = "/about"
 weight = 2
 
 [[main]]
+parent = "About"
+name = "Founders"
+pageRef = "/founders"
+
+[[main]]
+parent = "About"
+name = "Members"
+pageRef = "/members"
+
+[[main]]
 name = "Resources"
-pageRef = "/resources"
 weight = 3
 
 [[main]]
@@ -38,8 +46,8 @@ pageRef = "/about"
 weight = 1
 
 [[footer]]
-name = "Elements"
-pageRef = "/elements"
+name = "Terms of Service"
+pageRef = "/terms-of-service"
 weight = 2
 
 [[footer]]
