--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -2,13 +2,8 @@
 
 # main menu
 [[main]]
-name = "Home"
-pageRef = "/"
-weight = 1
-
-[[main]]
 name = "About"
-weight = 2
+weight = 1
 
 [[main]]
 parent = "About"
@@ -19,6 +14,11 @@ pageRef = "/founders"
 parent = "About"
 name = "Members"
 pageRef = "/members"
+
+[[main]]
+name = "How We Invest"
+pageRef = "/how-we-invest"
+weight = 2
 
 [[main]]
 name = "Resources"
