added date to counter

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -127,3 +127,4 @@ member_link = "https://app.dealum.com/#/dealroom/member/new/62028/cyog3czz59zg1t
 enable = true
 date = "oct 03, 2024 16:00:00"
 location = "Bratislava, SK"
+date_display = "03/10/2024"
