dynamically localized date for event, mermaid chart with tooltip test

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -123,6 +123,5 @@ member_link = "https://app.dealum.com/#/dealroom/member/new/62028/cyog3czz59zg1t
 # Next Event
 [next_event]
 enable = true
-date = "oct 03, 2024 16:00:00"
+date = "2024-10-03T16:00:00+02:00"
 location = "Bratislava, SK"
-date_display = "03/10/2024"
