--- a/config/_default/module.toml
+++ b/config/_default/module.toml
@@ -96,7 +96,7 @@ path = "github.com/gethugothemes/hugo-modules/seo-tools/google-tag-manager"
 # path = "github.com/gethugothemes/hugo-modules/seo-tools/counter-analytics"
 
 [[imports]]
-path = "github.com/hugomods/mermaid"
+path = "github.com/kdsp-net/mermaid"
 
 [[mounts]]
 source = 'content/english'
