--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "format": "prettier -w ."
   },
   "devDependencies": {
+    "@preline/input-number": "^2.4.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "autoprefixer": "^10.4.19",
