--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "project-setup": "node ./scripts/projectSetup.js",
     "theme-setup": "node ./scripts/themeSetup.js",
     "update-theme": "node ./scripts/themeUpdate.js",
-    "format": "prettier -w ."
+    "format": "prettier -w .",
+    "create-symlink": "ln -s ../../node_modules/preline/dist/preline.js static/js/preline.js"
   },
   "devDependencies": {
-    "@preline/input-number": "^2.4.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
     "postcss-cli": "^11.0.0",
+    "preline": "^2.4.1",
     "prettier": "^3.3.2",
     "prettier-plugin-go-template": "0.0.15",
     "prettier-plugin-tailwindcss": "^0.6.5",
