--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -11,7 +11,7 @@ logo_height = "32px"
 # if logo_webp set false, will not generate WEBP version of logo | default is true
 logo_webp = true
 # logo text will only show when logo is missing.
-logo_text = "Hugoplate"
+logo_text = "Gluon Syndicate"
 # navbar fixed to top
 navbar_fixed = true
 # theme-mode
@@ -27,7 +27,7 @@ google_adsense = ""     # example: ca-pub-xxxxxxxxxxxxxxxx
 # custom script on header, example: custom_script= "<script>console.log(\"Hello World\")</script>"
 custom_script = ""
 # copyright
-copyright = "Designed & Developed by [Zeon Studio](https://zeon.studio)"
+copyright = "© 2024 Gluon Syndicate"
 
 # Preloader
 # preloader module: https://github.com/gethugothemes/hugo-modules/tree/master/components/preloader
@@ -46,7 +46,7 @@ link = "https://app.dealum.com/#/company/application/new/179459/lv87nnpydpvdwsus
 enable = true
 type = "secondary"
 label_key = "member"
-link = "https://app.dealum.com/#/dealroom/member/new/62028/cyog3czz59zg1txo5oyln1tmlcoic3vr"
+link = "/membership"
 
 # search
 # search module: https://github.com/gethugothemes/hugo-modules/tree/master/search
@@ -62,14 +62,14 @@ show_categories = true
 # announcement
 [announcement]
 enable = true
-expire_days = 7
+expire_days = 30
 
 # seo meta data for OpenGraph / Twitter Card
 # seo module: https://github.com/gethugothemes/hugo-modules/tree/master/seo-tools/basic-seo
 [metadata]
-keywords = ["Boilerplate", "Hugo"]
-description = "Hugo & Tailwindcss Starter"
-author = "zeon.studio"
+keywords = ["Investment", "Angel", "Startup", "Funding"]
+description = "Gluon Syndicate"
+author = "Gluon Syndicate"
 image = "images/og-image.png"
 
 
@@ -125,23 +125,3 @@ member_link = "https://app.dealum.com/#/dealroom/member/new/62028/cyog3czz59zg1t
 enable = true
 date = "2024-10-03T16:00:00+02:00"
 location = "Bratislava, SK"
-
-[pricing]
-title = "Choose your plan"
-subtitle = "7 Days free trial. No credit card required."
-monthlyLabel = "Bill Monthly"
-yearlyLabel = "Bill Yearly"
-
-[[pricing.plans]]
-name = "Basic"
-price = "€1000"
-isPopular = true
-popularText = "MOST POPULAR"
-features = ["Deal flow", "Quarterly pitching events", "Online community"]
-link = "#"
-
-[[pricing.plans]]
-name = "Premium"
-price = "$3000"
-features = ["All Basic features", "Companion tickets", "Shortlist voting", "Wildcard"]
-link = "#"
