Updated favicon and og-image, commented out "founders" from menu, restructured founders content files.

--- a/config/_default/menus.cs.toml
+++ b/config/_default/menus.cs.toml
@@ -6,11 +6,11 @@
 name = "Investoři"
 weight = 1
 
-[[main]]
-parent = "Investoři"
-name = "Zakladatelé syndikátu"
-pageRef = "/founders"
-weight = 1
+# [[main]]
+# parent = "Investoři"
+# name = "Zakladatelé syndikátu"
+# pageRef = "/founders"
+# weight = 1
 
 [[main]]
 parent = "Investoři"
