--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -61,7 +61,7 @@ show_categories = true
 
 # announcement
 [announcement]
-enable = true
+enable = false
 dismissable = false
 expire_days = 30
 
@@ -123,6 +123,6 @@ member_link = "https://app.dealum.com/#/dealroom/member/new/62028/cyog3czz59zg1t
 
 # Next Event
 [next_event]
-enable = true
+enable = false
 date = "2024-10-22T16:00:00+02:00"
 location = "Bratislava, SK"
