--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -30,29 +30,18 @@ pageRef = "/how-we-invest"
 weight = 2
 
 [[main]]
-name = "Resources"
-weight = 3
-
-[[main]]
-parent = "Resources"
 name = "Knowledge Base"
-pageRef = "/resources/knowledge-base"
-weight = 1
-
-[[main]]
-parent = "Resources"
-name = "Blog"
-pageRef = "/resources/blog"
-weight = 2
+url = "https://kb.gluon.vc/"
+weight = 3
 
 # footer menu
 
 [[footer]]
 name = "Terms of Service"
-pageRef = "/resources/terms-of-service"
+url = "https://kb.gluon.vc/terms-of-service"
 weight = 1
 
 [[footer]]
 name = "Privacy Policy"
-pageRef = "/resources/privacy-policy"
+url = "https://kb.gluon.vc/privacy-policy"
 weight = 2
