--- a/config/_default/menus.sk.toml
+++ b/config/_default/menus.sk.toml
@@ -25,34 +25,23 @@ pageRef = "/membership"
 weight = 3
 
 [[main]]
-name = "Ako investujeme"
+name = "Jak investujeme"
 pageRef = "/how-we-invest"
 weight = 2
 
 [[main]]
-name = "Zdroje"
+name = "Znalostná báza (EN)"
+url = "https://kb.gluon.vc/"
 weight = 3
-
-[[main]]
-parent = "Zdroje"
-name = "Wiki"
-pageRef = "/resources/knowledge-base"
-weight = 1
-
-[[main]]
-parent = "Zdroje"
-name = "Blog"
-pageRef = "/resources/blog"
-weight = 2
 
 # footer menu
 
 [[footer]]
 name = "Všeobecné pbchodné podmienky"
-pageRef = "/resources/terms-of-service"
+url = "https://kb.gluon.vc/terms-of-service"
 weight = 1
 
 [[footer]]
 name = "Zásady ochrany osobných údajov"
-pageRef = "/resources/privacy-policy"
+url = "https://kb.gluon.vc/privacy-policy"
 weight = 2
