--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -124,5 +124,5 @@ member_link = "https://app.dealum.com/#/dealroom/member/new/62028/cyog3czz59zg1t
 # Next Event
 [next_event]
 enable = true
-date = "2025-06-17T16:00:00+02:00"
-location = "Prague, CZ"
+date = "2025-11-06T16:00:00+02:00"
+location = "Bratislava, SK"
